[package]
name = "port_forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
log = "0.4.22"
once_cell = "1.19.0"
tokio = { version = "1.39.2", features = ["net", "macros", "rt-multi-thread", "io-util"] }
tracing-subscriber = "0.3.18"
